<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f4f7fe"
    tools:context=".ExerciseActivity">


    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="437dp"
        android:layout_height="313dp"
        android:contentDescription="@string/backgroundtop"
        android:scaleType="center"
        app:layout_constraintBottom_toTopOf="@+id/featured_recycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rectanglehome" />


    <ImageView
        android:id="@+id/illustrationImageView"
        android:layout_width="298dp"
        android:layout_height="297dp"
        android:layout_marginStart="192dp"
        android:layout_marginLeft="192dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/illustration"
        app:layout_constraintStart_toStartOf="@+id/backgroundImage"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/workout" />

    <TextView
        android:id="@+id/dayTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="76dp"
        android:padding="1dp"
        android:text="@string/greetingTextView"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:fontFamily="sans-serif-condensed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ellianaTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:padding="1dp"
        android:text="@string/ellianaTextView"
        android:textSize="24sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif-condensed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dayTextView" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="139dp"
        android:layout_height="80dp"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ellianaTextView"
        app:srcCompat="@drawable/cardmenu" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/featured_recycler"
        android:layout_width="411dp"
        android:layout_height="379dp"
        android:layout_marginBottom="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/timeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginLeft="39dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="41dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="sans-serif-condensed"
        android:text="Good Morning"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />


</androidx.constraintlayout.widget.ConstraintLayout>