<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f4f7fe"
    tools:context=".HomeActivity">


    <ImageView
        android:id="@+id/backgroundImageHome"
        android:layout_width="425dp"
        android:layout_height="294dp"
        android:contentDescription="@string/backgroundtop"
        app:layout_constraintBottom_toTopOf="@+id/featured_recycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rectanglelight" />

    <ImageView
        android:id="@+id/illustrationImageView"
        android:layout_width="244dp"
        android:layout_height="235dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="56dp"
        android:contentDescription="@string/illustration"
        app:layout_constraintBottom_toTopOf="@+id/featured_recycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/workoutTextView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.41"
        app:srcCompat="@drawable/homeillustration" />

    <TextView
        android:id="@+id/workoutTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="52dp"
        android:padding="5dp"
        android:text="Daily Workout"
        android:textSize="24sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif-condensed-light"
        app:layout_constraintStart_toStartOf="@+id/backgroundImageHome"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/textMenu"
        android:layout_width="160dp"
        android:layout_height="49dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@+id/backgroundImageHome"
        app:layout_constraintTop_toBottomOf="@+id/workoutTextView"
        app:srcCompat="@drawable/rectangletext" />

    <TextView
        android:id="@+id/menuText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="60dp"
        android:layout_marginEnd="57dp"
        android:layout_marginRight="57dp"
        android:text="30 to 40 mins session"
        android:textColor="#fff"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textMenu"
        app:layout_constraintEnd_toEndOf="@+id/textMenu"
        app:layout_constraintHorizontal_bias="0.42"
        app:layout_constraintStart_toStartOf="@+id/textMenu"
        app:layout_constraintTop_toTopOf="@+id/textMenu"
        app:layout_constraintVertical_bias="0.533" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="185dp"
        android:layout_height="57dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="8dp"
        android:padding="1dp"
        android:text="@string/exercisetext"
        app:fontFamily="sans-serif-medium"
        app:layout_constraintStart_toStartOf="@+id/backgroundImageHome"
        app:layout_constraintTop_toBottomOf="@+id/textMenu" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/featured_recycler"
        android:layout_width="402dp"
        android:layout_height="385dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
